# web-shim

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
edge-proxy/: .gitignore  fastly.toml  package.json  webpack.config.js
edge-proxy/src/: index.js  welcome-to-compute.html
src/: config.rs  error.rs  main.rs
src/cert/: build.sh  mod.rs
src/middleware/: access_control.rs  mod.rs  rate_limiting.rs
src/util/: hash.rs  mod.rs  pstree.rs  signature_v4.rs
src/worker/: mod.rs  pdf.rs  screenshot.rs
